WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
32687
MSAA: Accessibility role of list markers is wrong
https://bugs.webkit.org/show_bug.cgi?id=32687
Summary
MSAA: Accessibility role of list markers is wrong
Jon Honeycutt
Reported
2009-12-17 17:54:25 PST
List markers should have the "text" role, not the "editable text" role, to match IE and Firefox.
Attachments
patch
(4.74 KB, patch)
2009-12-18 13:47 PST
,
Jon Honeycutt
aroben
: review+
jhoneycutt
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jon Honeycutt
Comment 1
2009-12-18 13:47:20 PST
Created
attachment 45183
[details]
patch
WebKit Review Bot
Comment 2
2009-12-18 13:52:14 PST
style-queue ran check-webkit-style on
attachment 45183
[details]
without any errors.
Adam Roben (:aroben)
Comment 3
2009-12-18 14:18:38 PST
Comment on
attachment 45183
[details]
patch r=me
Jon Honeycutt
Comment 4
2009-12-18 16:52:23 PST
Landed in
r52350
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug