MSAA: Accessibility role of list markers is wrong

https://bugs.webkit.org/show_bug.cgi?id=32687

Reviewed by Adam Roben.

WebKit/win:

* AccessibleBase.cpp:
(MSAARole):
Make the WebCore list marker role map to the MSAA static text role.

LayoutTests:

* platform/win/accessibility/list-marker-role-expected.txt: Added.
* platform/win/accessibility/list-marker-role.html: Added.
Verify that the list marker role is "text".

Canonical link: https://commits.webkit.org/43773@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@52350 268f45cc-cd09-0410-ab3c-d52691b4dbfc